VS ApexCode/UlbergProject0/force-app/main/default/objects/Product2/fields/Asking_Price__c.field-meta.xml
<CustomField>
    <fullName>Asking_Price__c</fullName>
    <label>Asking Price</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>