VS ApexCode/UlbergProject0/force-app/main/default/objects/Product2/fields/ComputerSpecs__c.field-meta.xml
<CustomField>
    <fullName>ComputerSpecs__c</fullName>
    <label>ComputerSpecs</label>
    <length>100</length>
    <type>Text</type>
</CustomField>