VS ApexCode/UlbergProject0/force-app/main/default/objects/Product2/fields/Date_Posted__c.field-meta.xml
<CustomField>
    <fullName>Date_Posted__c</fullName>
    <label>Date Posted</label>
    <required>true</required>
    <type>Date</type>
</CustomField>