VS ApexCode/UlbergProject0/force-app/main/default/objects/Product2/fields/ItemStatus__c.field-meta.xml
<CustomField>
    <fullName>ItemStatus__c</fullName>
    <label>ItemStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For Sale</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>