VS ApexCode/UlbergProject0/force-app/main/default/objects/Product2/fields/ItemType__c.field-meta.xml
<CustomField>
    <fullName>ItemType__c</fullName>
    <label>ItemType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ItemType</valueSetName>
    </valueSet>
</CustomField>