VS ApexCode/UlbergProject0/force-app/main/default/objects/Product2/fields/Miles__c.field-meta.xml
<CustomField>
    <fullName>Miles__c</fullName>
    <inlineHelpText>Miles on car</inlineHelpText>
    <label>Miles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>