VS ApexCode/UlbergProject0/force-app/main/default/objects/Product2/fields/Model_of_car__c.field-meta.xml
<CustomField>
    <fullName>Model_of_car__c</fullName>
    <description>What model of car you are selling</description>
    <label>Model of car</label>
    <length>20</length>
    <type>Text</type>
</CustomField>