VS ApexCode/UlbergProject0/force-app/main/default/objects/Product2/fields/Year_of_car__c.field-meta.xml
<CustomField>
    <fullName>Year_of_car__c</fullName>
    <description>Year of car</description>
    <label>Year of car</label>
    <length>10</length>
    <type>Text</type>
</CustomField>