VS ApexCode/UlbergProject0/force-app/main/default/objects/Product2/recordTypes/Cars.recordType-meta.xml
<RecordType>
    <fullName>Cars</fullName>
    <active>true</active>
    <label>Cars</label>
</RecordType>