VS ApexCode/UlbergProject0/force-app/main/default/objects/Product2/recordTypes/Electronics.recordType-meta.xml
<RecordType>
    <fullName>Electronics</fullName>
    <active>true</active>
    <label>Electronics</label>
</RecordType>